// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render basic component should check snapshot with email 1`] = `
<div>
  <div
    class=" Avatar"
  >
    <div
      class="AvatarInner"
      style="line-height: 36px; text-align: center; border-radius: 100%; max-width: 36px; width: 36px; max-height: 36px; height: 36px; background-color: rgb(164, 176, 190);"
    >
      JD
    </div>
  </div>
</div>
`;

exports[`Render basic component should check snapshot with image 1`] = `
<div>
  <div
    class=" Avatar"
  >
    <div
      class="AvatarInner"
      style="line-height: 36px; text-align: center; border-radius: 100%; max-width: 36px; width: 36px; max-height: 36px; height: 36px;"
    >
      <img
        alt=""
        src="https://www.mangaship.com/Content/img/human-avatar.png"
        style="display: block; border-radius: 100%; width: 36px; height: 36px;"
      />
    </div>
  </div>
</div>
`;

exports[`Render basic component should check snapshot with name 1`] = `
<div>
  <div
    class=" Avatar"
  >
    <div
      class="AvatarInner"
      style="line-height: 36px; text-align: center; border-radius: 100%; max-width: 36px; width: 36px; max-height: 36px; height: 36px; background-color: rgb(235, 47, 6);"
    >
      JD
    </div>
  </div>
</div>
`;
